<resources>
    <string name="app_name">Stranded</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="power_on">Power On</string>
    <string name="no_power_recharge_in_progress"><![CDATA[---NO POWER---\n---RECHARGE IN PROGRESS---]]></string>
    <string name="letterDurationLabel">Letter Duration (how fast the letters appear)</string>
    <string name="milliseconds">milliseconds</string>
    <string name="skip_the_wait">Skip The Wait!</string>
    <string name="demo_mode">Demo Mode</string>
    <string name="about_the_app">About The App</string>
    <string name="about_body">Stranded is a portfolio project meant to be a showcase of what I’m capable of as an android developer. Let me be upfront and say I am completely self taught. I started out knowing nothing and essentially just used google\'s android documentation and guides to learn kotlin, the android framework, how to do literally anything and everything, you get the gist. I did my best to follow google’s recommended app architecture and do everything “the right way™”. Hopefully it shows, even though a lot of the finer details may be somewhat janky homebrew. Anyway I hope you enjoy playing through it and if you have any questions, bug reports, or want to reach out about hiring me my email is right below! \n\n- Austin Green \n\nEmail - austinoguy51@gmail.com</string>
    <string name="stranded">Stranded</string>
    <string name="by_austin_green">by \n\nAustin Green</string>
    <string name="a_strand_type_game">A "Strand Type" Game</string>
    <string name="reset_progress">Reset Progress</string>
    <string name="stranded_is_completely_open_source">Stranded is completely open source!</string>
    <string name="link">Github Link</string>
    <string name="reset_progress_dialog">Are you sure you want to reset your progress?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
</resources>